[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "storm-aws-adfs"
version = "1.0.0"
description = "AWS CLI authenticator via ADFS - small command-line tool to authenticate via ADFS and assume chosen role"
keywords = ["aws", "adfs", "console", "tool"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3"
]
authors = [
    "Federico BARBERO <f.barbero@reply.it>",
    "Venth <artur.krysiak.warszawa@gmail.com>"
]
readme = "README.md"

[tool.poetry.scripts]
storm-aws-adfs = "storm_aws_adfs.commands:cli"

[tool.poetry.dependencies]
python = "^3.6"
botocore = ">=1.12.6"
click = "*"
configparser = "*"
fido2 = ">=0.9.3"
lxml = "*"
requests = "*"
requests-kerberos = [
    { version = "*", markers = "platform_system != 'Windows'" },
]
requests-negotiate-sspi= [
    { version = ">=0.3.4", markers = "platform_system == 'Windows'" },
]
boto3 = "^1.20.50"

[tool.poetry.dev-dependencies]
coverage = "<7"
pytest = "^7.0.1"
toml = "^0.10.2"
